# ascii-art

./: CMakeLists.txt  Makefile  README.md  map.txt  prohlaseni.txt  zadani.txt
examples/: Doxyfile
inc/: BmpImageSource.h  Filter.h  MultiImageSource.h  Pixel.h  Player.h  StaticImageSource.h
src/: AsciiPrinter.cpp  AsciiPrinter.h  BmpImageSource.cpp  BmpImageSource.h  BmpImageSource.tpp  BrightnessFilter.cpp  BrightnessFilter.h  Editor.cpp  Editor.h  Editor.tpp  Filter.h  Frame.cpp  Frame.h  Frame.tpp  GreyscaleFilter.cpp  GreyscaleFilter.h  ImageSource.cpp  ImageSource.h  InvalidFileException.cpp  InvalidFileException.h  InvertFilter.cpp  InvertFilter.h  MultiFilter.cpp  MultiFilter.h  MultiFilter.tpp  MultiImageSource.cpp  MultiImageSource.h  MultiImageSource.tpp  NCursesBuf.cpp  NCursesBuf.h  Pixel.cpp  Pixel.h  Pixel.tpp  Player.cpp  Player.h  StaticImageSource.cpp  StaticImageSource.h  main.cpp
src/ui/: Control.cpp  Control.h  FilterMenuControl.cpp  FilterMenuControl.h  FilterPanelControl.cpp  FilterPanelControl.h  FilterPanelControl.tpp  PlayerControl.cpp  PlayerControl.h  Rectangle.cpp  Rectangle.h  SidePanelControl.cpp  SidePanelControl.h  SidePanelControl.tpp
